--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ ISSUER_URI=http://key-server:8080/realms/gxfscatalog
 #DB_NAME=public    
 DB_USER=postgres
 DB_PASS=postgres
-DB_URL=jdbc:postgresql://localhost:5432/postgres
+DB_URL=jdbc:postgresql://localhost:5432/gxfs
 
 ### GRAPH STORE PROPERTIES ###
 GRAPH_STORE_URI=bolt://localhost:7687
