--- a/initial_data/edc/edc2.properties
+++ b/initial_data/edc/edc2.properties
@@ -10,16 +10,16 @@ web.http.control.port=19192
 web.http.control.path=/control
 
 edc.dsp.callback.address=http://localhost:8123/edc2/protocol
-edc.participant.id=DD:B3:DE:E7:0C:BD:47:C8:66:08:0A:1E:A5:F9:D7:D2:E6:D7:9A:54:keyid:DD:B3:DE:E7:0C:BD:47:C8:66:08:0A:1E:A5:F9:D7:D2:E6:D7:9A:54
+edc.participant.id=5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC:keyid:5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC
 edc.api.auth.key=5678
 
 edc.oauth.token.url=http://localhost:4567/token
 edc.oauth.certificate.alias=1
 edc.oauth.private.key.alias=1
-edc.oauth.client.id=DD:B3:DE:E7:0C:BD:47:C8:66:08:0A:1E:A5:F9:D7:D2:E6:D7:9A:54:keyid:DD:B3:DE:E7:0C:BD:47:C8:66:08:0A:1E:A5:F9:D7:D2:E6:D7:9A:54
+edc.oauth.client.id=5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC:keyid:5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC
 edc.oauth.provider.jwks.url=http://localhost:4567/jwks.json
 edc.oauth.provider.audience=idsc:IDS_CONNECTORS_ALL
 edc.iam.token.scope=idsc:IDS_CONNECTOR_ATTRIBUTES_ALL
 edc.vault=/opt/vault.properties
 edc.keystore=/opt/edc.pfx
-edc.keystore.password=JFK0GPgvTirG8zQuIsT2JmRuSYIiPyPh
+edc.keystore.password=3WJepCDzeASnFQgJXZRICKOgJU4xP+95
