--- a/initial_data/edc/edc1.properties
+++ b/initial_data/edc/edc1.properties
@@ -10,16 +10,16 @@ web.http.control.port=29192
 web.http.control.path=/control
 
 edc.dsp.callback.address=http://localhost:8123/edc1/protocol
-edc.participant.id=22:1C:A3:1E:C4:D8:20:EC:A9:7F:BB:AC:E1:99:36:51:70:F9:71:4A:keyid:22:1C:A3:1E:C4:D8:20:EC:A9:7F:BB:AC:E1:99:36:51:70:F9:71:4A
+edc.participant.id=A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57:keyid:A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57
 edc.api.auth.key=1234
 
 edc.oauth.token.url=http://localhost:4567/token
 edc.oauth.certificate.alias=1
 edc.oauth.private.key.alias=1
-edc.oauth.client.id=22:1C:A3:1E:C4:D8:20:EC:A9:7F:BB:AC:E1:99:36:51:70:F9:71:4A:keyid:22:1C:A3:1E:C4:D8:20:EC:A9:7F:BB:AC:E1:99:36:51:70:F9:71:4A
+edc.oauth.client.id=A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57:keyid:A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57
 edc.oauth.provider.jwks.url=http://localhost:4567/jwks.json
 edc.oauth.provider.audience=idsc:IDS_CONNECTORS_ALL
 edc.iam.token.scope=idsc:IDS_CONNECTOR_ATTRIBUTES_ALL
 edc.vault=/opt/vault.properties
 edc.keystore=/opt/edc.pfx
-edc.keystore.password=MJANDRg56yQeXY6+zYSBEo+q9phmZOys
+edc.keystore.password=COM6+UtDXqhrhFpN9cXSxuqwdOyZ1OKU
