--- a/initial_data/edc/edc1.properties
+++ b/initial_data/edc/edc1.properties
@@ -10,16 +10,16 @@ web.http.control.port=29192
 web.http.control.path=/control
 
 edc.dsp.callback.address=http://localhost:8123/edc1/protocol
-edc.participant.id=A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57:keyid:A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57
+edc.participant.id=20:1D:9C:04:0A:71:B9:E7:8C:28:9D:70:A6:84:43:59:2D:BA:E8:B3:keyid:20:1D:9C:04:0A:71:B9:E7:8C:28:9D:70:A6:84:43:59:2D:BA:E8:B3
 edc.api.auth.key=1234
 
 edc.oauth.token.url=http://localhost:4567/token
 edc.oauth.certificate.alias=1
 edc.oauth.private.key.alias=1
-edc.oauth.client.id=A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57:keyid:A0:0F:A3:85:60:52:95:BA:FA:70:B7:28:24:C1:99:8E:DD:7E:48:57
+edc.oauth.client.id=20:1D:9C:04:0A:71:B9:E7:8C:28:9D:70:A6:84:43:59:2D:BA:E8:B3:keyid:20:1D:9C:04:0A:71:B9:E7:8C:28:9D:70:A6:84:43:59:2D:BA:E8:B3
 edc.oauth.provider.jwks.url=http://localhost:4567/jwks.json
 edc.oauth.provider.audience=idsc:IDS_CONNECTORS_ALL
 edc.iam.token.scope=idsc:IDS_CONNECTOR_ATTRIBUTES_ALL
 edc.vault=/opt/vault.properties
 edc.keystore=/opt/edc.pfx
-edc.keystore.password=COM6+UtDXqhrhFpN9cXSxuqwdOyZ1OKU
+edc.keystore.password=zw9Eie7ztAqpl0Rbd/GEatmvzEREXEzL
