--- a/initial_data/edc/edc2.properties
+++ b/initial_data/edc/edc2.properties
@@ -10,16 +10,16 @@ web.http.control.port=19192
 web.http.control.path=/control
 
 edc.dsp.callback.address=http://localhost:8123/edc2/protocol
-edc.participant.id=5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC:keyid:5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC
+edc.participant.id=59:0B:DD:26:41:AC:57:D7:ED:76:D5:84:F8:BC:AC:8E:4C:C7:56:70:keyid:59:0B:DD:26:41:AC:57:D7:ED:76:D5:84:F8:BC:AC:8E:4C:C7:56:70
 edc.api.auth.key=5678
 
 edc.oauth.token.url=http://localhost:4567/token
 edc.oauth.certificate.alias=1
 edc.oauth.private.key.alias=1
-edc.oauth.client.id=5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC:keyid:5C:B8:7D:52:E2:D9:F2:FE:82:04:8F:8F:46:9A:9A:8F:B0:1B:08:CC
+edc.oauth.client.id=59:0B:DD:26:41:AC:57:D7:ED:76:D5:84:F8:BC:AC:8E:4C:C7:56:70:keyid:59:0B:DD:26:41:AC:57:D7:ED:76:D5:84:F8:BC:AC:8E:4C:C7:56:70
 edc.oauth.provider.jwks.url=http://localhost:4567/jwks.json
 edc.oauth.provider.audience=idsc:IDS_CONNECTORS_ALL
 edc.iam.token.scope=idsc:IDS_CONNECTOR_ATTRIBUTES_ALL
 edc.vault=/opt/vault.properties
 edc.keystore=/opt/edc.pfx
-edc.keystore.password=3WJepCDzeASnFQgJXZRICKOgJU4xP+95
+edc.keystore.password=F4HKbkgAORZWwzWasY10RhsxHt99LaoE
