update catalog and wizard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
   server:
     user: "${UID}:${GID}"
     container_name: "fc-server_merlot"
-    image: ghcr.io/merlot-education/catalog-shapes/gxfs-catalog:0a58906
+    image: ghcr.io/merlot-education/catalog-shapes/gxfs-catalog:2.0.0
     environment:
       KEYCLOAK_CREDENTIALS_SECRET: "${FC_CLIENT_SECRET}"
       KEYCLOAK_AUTH-SERVER-URL: "${KEYCLOAK_AUTH_SERVER_URL}"
@@ -173,7 +173,7 @@ services:
   sd-creation-wizard-api:
     user: "${UID}:${GID}"
     container_name: "sd-creation-wizard-api"
-    image: ghcr.io/merlot-education/catalog-shapes/sd-creation-wizard-api:0a58906
+    image: ghcr.io/merlot-education/catalog-shapes/sd-creation-wizard-api:2.0.0
     networks:
       - "gaia-x"
     ports:
